--- a/body.html
+++ b/body.html
@@ -37,7 +37,7 @@ html, body {
 }
 
 .header img {
-    max-height: 50px;
+    max-height: 40px; /* Adjust logo size */
 }
 
 .header nav {
@@ -64,8 +64,8 @@ html, body {
 }
 
 .header-icons img {
-    width: 24px;
-    height: 24px;
+    width: 28px; /* Adjust icon size */
+    height: 28px; /* Adjust icon size */
     cursor: pointer;
 }
 
