--- a/body.html
+++ b/body.html
@@ -37,7 +37,7 @@ html, body {
 }
 
 .header img {
-    max-height: 40px; /* Adjust logo size */
+    max-height: 40px; 
 }
 
 .header nav {
@@ -64,8 +64,8 @@ html, body {
 }
 
 .header-icons img {
-    width: 28px; /* Adjust icon size */
-    height: 28px; /* Adjust icon size */
+    width: 28px; 
+    height: 28px; 
     cursor: pointer;
 }
 
