--- a/login.html
+++ b/login.html
@@ -73,7 +73,8 @@
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
         .header img {
-            max-height: 50px;
+            height: 60px; 
+            width: auto;
         }
         .header nav {
             display: flex;
@@ -95,8 +96,8 @@
             gap: 20px;
         }
         .header-icons img {
-            width: 24px;
-            height: 24px;
+            width: 36px; 
+            height: 36px; 
             cursor: pointer;
         }
 
