--- a/body.html
+++ b/body.html
@@ -109,14 +109,14 @@ html, body {
 </head>
 <body>
     <header class="header">
-        <img src="pic01-ets-removebg-preview1.png" alt="ETS Logo">
+        <img src="PICTURE\LOGO.PNG" alt="ETS Logo">
         <nav>
             <a href="#">Homepage</a>
             <a href="#">Menu</a>
         </nav>
         <div class="header-icons">
-            <img src="cart.png" alt="Cart Icon">
-            <img src="photo.png" alt="Profile Icon"> 
+            <img src="PICTURE\CART.PNG" alt="Cart Icon">
+            <img src="PICTURE\PROFILE.PNG" alt="Profile Icon"> 
         </div>
     </header>
 
