--- a/body.html
+++ b/body.html
@@ -23,7 +23,7 @@
     <div class="content">
         <h1>Welcome to our website!</h1>
         <p>This is where the main content will appear.</p>
-    </div>
+    </div> /* tukar ikut content masing2 */
 
     <footer class="footer">
         2018 All Rights Reserved KTM Berhad. KTM Berhad shall not be liable for any loss or damage caused by the usage of any 
