--- a/body2.html
+++ b/body2.html
@@ -178,11 +178,9 @@
     <header class="header">
         <img src="PICTURE\LOGO.PNG" alt="ETS Logo">
         <nav>
-            <a href="#">Homepage</a>
-            <a href="#">Menu</a>
+            <a href="#">ADMIN INTERFACE</a>
         </nav>
         <div class="header-icons">
-            <img src="PICTURE\CART.PNG" alt="Cart Icon">
             <img src="PICTURE\PROFILE.PNG" alt="Profile Icon"> 
         </div>
     </header>
