--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <style>
+        /* CSS Code (same as your provided styles with slight adjustments) */
         html, body {
             height: 100%;
             margin: 0;
@@ -62,125 +63,49 @@
         .form-group button:hover {
             background-color: #003b7d;
         }
-
-        .header {
-            background-color: #004a9f;
-            color: white;
-            padding: 10px 30px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        .header img {
-            height: 60px;
-            width: auto;
-        }
-        .header nav {
-            display: flex;
-            gap: 20px;
-        }
-        .header nav a {
-            color: white;
-            text-decoration: none;
-            font-size: 16px;
-            font-weight: bold;
-            transition: color 0.3s;
-        }
-        .header nav a:hover {
-            color: #ffd700;
-        }
-        .header-icons {
-            display: flex;
-            align-items: center;
-            gap: 20px;
-        }
-        .header-icons img {
-            width: 36px;
-            height: 36px;
-            cursor: pointer;
-        }
-
-        .footer {
+        .header, .footer {
             background-color: #004a9f;
             color: white;
             padding: 20px;
             text-align: center;
-            font-size: 14px;
-            margin-top: auto; 
+        }
+        .header img {
+            height: 60px;
         }
         .footer a {
             color: #ffd700;
-            text-decoration: none;
-            font-weight: bold;
-            transition: text-decoration 0.3s;
-        }
-        .footer a:hover {
-            text-decoration: underline;
-        }
-
-        @media (max-width: 768px) {
-            .header {
-                flex-direction: column;
-                align-items: center;
-            }
-            .header nav {
-                flex-direction: column;
-                gap: 10px;
-            }
-            .header-icons {
-                justify-content: center;
-            }
-            .container {
-                max-width: 90%; 
-                padding: 20px; 
-            }
-            .container h2 {
-                font-size: 24px; 
-            }
         }
     </style>
 </head>
 <body>
 
-    <header class="header">
-        <img src="PICTURE\LOGO.png" alt="ETS Logo">
-        <nav>
-            <a href="#">Homepage</a>
-            <a href="#">Menu</a>
-        </nav>
-        <div class="header-icons">
-            <img src="PICTURE\CART.png" alt="Cart Icon"> 
-            <img src="PICTURE\PROFILE.png" alt="Profile Icon"> 
+<header class="header">
+    <img src="PICTURE/LOGO.png" alt="ETS Logo">
+</header>
+
+<div class="container">
+    <h2>Login</h2>
+    <form action="login.php" method="POST">
+        <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required placeholder="Enter your email">
         </div>
-    </header>
+        <div class="form-group">
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required placeholder="Enter your password">
+        </div>
+        <div class="form-group">
+            <button type="submit">Login</button>
+        </div>
+    </form>
+    <p style="text-align: center; margin-top: 15px;">
+        New User? <a href="register.html" style="color: #007BFF; text-decoration: none;">Register here</a><br>
+    </p>
+</div>
 
-    <div class="container">
-        <h2>Login</h2>
-        <form action="login.php" method="POST">
-            <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" id="email" required placeholder="Enter your email">
-            </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" id="password" required placeholder="Enter your password">
-            </div>
-            <div class="form-group">
-                <button type="submit">Login</button>
-            </div>
-        </form>
-        <p style="text-align: center; margin-top: 15px;">
-            New User? <a href="register.html" style="color: #007BFF; text-decoration: none;">Register here</a><br>
-            Forgot Password? <a href="resetpass.html" style="color: #007BFF; text-decoration: none;">Reset password</a>
-        </p>
-    </div>
-
-    <footer class="footer">
-        2018 All Rights Reserved KTM Berhad. KTM Berhad shall not be liable for any loss or damage caused by the usage of any 
-        information obtained from this site. <br>
-        © Copyright 2018 by <a href="#">KTM Berhad</a>
-    </footer>
+<footer class="footer">
+    2018 All Rights Reserved KTM Berhad.
+</footer>
 
 </body>
 </html>
