--- a/register.html
+++ b/register.html
@@ -5,25 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
     <style>
+        /* CSS Styles */
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
         }
-
         html, body {
             height: 100%;
             display: flex;
             flex-direction: column;
             font-family: Arial, sans-serif; 
         }
-
         .content {
             flex-grow: 1;
             padding: 20px;
             text-align: center;
         }
-
         .header {
             background-color: #004a9f;
             color: white;
@@ -33,17 +31,14 @@
             justify-content: space-between;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
-
         .header img {
             height: 60px;
             width: auto;
         }
-
         .header nav {
             display: flex;
             gap: 20px;
         }
-
         .header nav a {
             color: white;
             text-decoration: none;
@@ -51,23 +46,9 @@
             font-weight: bold;
             transition: color 0.3s;
         }
-
         .header nav a:hover {
             color: #ffd700;
         }
-
-        .header-icons {
-            display: flex;
-            align-items: center;
-            gap: 20px;
-        }
-
-        .header-icons img {
-            width: 36px;
-            height: 36px;
-            cursor: pointer;
-        }
-
         .container {
             max-width: 450px;
             margin: 40px auto;
@@ -77,21 +58,17 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             flex-grow: 1; 
         }
-
         .container h2 {
             text-align: center;
             margin-bottom: 20px;
         }
-
         .form-group {
             margin-bottom: 20px;
         }
-
         .form-group label {
             display: block;
             margin-bottom: 5px;
         }
-
         .form-group input {
             width: 100%;
             padding: 12px;
@@ -99,11 +76,9 @@
             border-radius: 5px;
             font-size: 14px;
         }
-
         .form-group input:focus {
             border-color: #004a9f;
         }
-
         .form-group button {
             width: 100%;
             padding: 12px;
@@ -114,18 +89,9 @@
             font-size: 16px;
             cursor: pointer;
         }
-
         .form-group button:hover {
             background-color: #003b7d;
         }
-
-        .form-group small {
-            display: block;
-            font-size: 12px;
-            color: #666;
-            margin-top: 5px;
-        }
-
         .footer {
             background-color: #004a9f;
             color: white;
@@ -134,77 +100,51 @@
             font-size: 14px;
             margin-top: auto; 
         }
-
         .footer a {
             color: #ffd700;
             text-decoration: none;
             font-weight: bold;
         }
-
         .footer a:hover {
             text-decoration: underline;
-        }
-
-        @media (max-width: 768px) {
-            .header {
-                flex-direction: column;
-                align-items: center;
-            }
-
-            .header nav {
-                flex-direction: column;
-                gap: 10px;
-            }
-
-            .header-icons {
-                justify-content: center;
-            }
         }
     </style>
 </head>
 <body>
 
 <header class="header">
-    <img src="PICTURE\LOGO.png" alt="ETS Logo">
+    <img src="PICTURE/LOGO.png" alt="ETS Logo">
     <nav>
         <a href="#">Homepage</a>
         <a href="#">Menu</a>
     </nav>
-    <div class="header-icons">
-        <img src="PICTURE\CART.png" alt="Cart Icon">
-        <img src="PICTURE\PROFILE.png" alt="Profile Icon"> 
-    </div>
 </header>
 
 <div class="container">
     <h2>Register</h2>
-    <form action="register.php" method="POST">
+    <form id="registerForm" action="register.php" method="POST">
         <div class="form-group">
             <label for="name">Name:</label>
-            <input type="text" id="name" required placeholder="Enter your full name">
+            <input type="text" name="name" id="name" required placeholder="Enter your full name">
         </div>
         <div class="form-group">
             <label for="phone">Phone Number:</label>
-            <input type="tel" id="phone" required placeholder="Enter your phone number">
+            <input type="tel" name="phone" id="phone" required placeholder="Enter your phone number">
         </div>
         <div class="form-group">
-            <label for="reg-email">Email:</label>
-            <input type="email" id="reg-email" required placeholder="Enter your email">
+            <label for="email">Email:</label>
+            <input type="email" name="email" id="email" required placeholder="Enter your email">
         </div>
         <div class="form-group">
-            <label for="reg-password">Password:</label>
-            <input type="password" id="reg-password" required placeholder="Enter your password">
-            <small>Password must contain at least 8 characters, including one uppercase, one lowercase, and one number.</small>
-        </div>
-        <div class="form-group">
-            <label for="confirm-password">Confirm Password:</label>
-            <input type="password" id="confirm-password" required placeholder="Repeat your password">
+            <label for="password">Password:</label>
+            <input type="password" name="password" id="password" required placeholder="Enter your password">
+            <small>Password must be at least 8 characters, including one uppercase, one lowercase, and one number.</small>
         </div>
         <div class="form-group">
             <button type="submit">Register</button>
         </div>
         <p style="text-align: center; margin-top: 15px;">
-            Already have an account? <a href="login.html" style="color: #007BFF; text-decoration: none;">Login here</a>
+            Already have an account? <a href="login.html">Login here</a>
         </p>
     </form>
 </div>
@@ -217,18 +157,13 @@
 
 <script>
     document.getElementById('registerForm').addEventListener('submit', function(e) {
-        e.preventDefault();
-
-        const password = document.getElementById('reg-password').value;
-        const confirmPassword = document.getElementById('confirm-password').value;
+        const password = document.getElementById('password').value;
+        const confirmPassword = document.getElementById('confirmPassword').value;
 
         if (password !== confirmPassword) {
+            e.preventDefault();
             alert('Passwords do not match!');
-            return;
         }
-
-        alert('Registration successful!');
-        document.getElementById('registerForm').reset();
     });
 </script>
 
