--- a/register.html
+++ b/register.html
@@ -129,7 +129,7 @@
         </div>
         <div class="form-group">
             <label for="phone">Phone Number:</label>
-            <input type="tel" name="phone" id="phone" required placeholder="Enter your phone number">
+            <input type="tel" name="phone" id="phone" placeholder="Enter your phone number">
         </div>
         <div class="form-group">
             <label for="email">Email:</label>
@@ -158,11 +158,11 @@
 <script>
     document.getElementById('registerForm').addEventListener('submit', function(e) {
         const password = document.getElementById('password').value;
-        const confirmPassword = document.getElementById('confirmPassword').value;
 
-        if (password !== confirmPassword) {
+        const passwordRegex = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[A-Za-z\d]{8,}$/;
+        if (!passwordRegex.test(password)) {
             e.preventDefault();
-            alert('Passwords do not match!');
+            alert('Password must be at least 8 characters long and include at least one uppercase letter, one lowercase letter, and one number.');
         }
     });
 </script>
